# PredictStarNumberExtension

./: .eslintrc.json  .gitignore  BeatSaver.js  Cargo.toml  DEPENDENCY_LICENSES.html  README.md  ScoreSaber.js  about.toml  manifest.json  package-lock.json  package.json  todo  tsconfig.json  vite.config.background.ts  vite.config.beatsaver.ts  vite.config.scoresaber.ts  webpack.common.background.js  webpack.common.foreground.js  webpack.config.js  webpack.dev.js  webpack.prod.background.js  webpack.prod.foreground.js  webpack.prod.js
public/: manifest.json
src/: lib.rs
src-ts/: BeatSaver.ts  Characteristic.ts  Difficulty.ts  ScoreSaber.ts  background.ts  backgroundDataGetter.ts  fetcher.ts  modelGetter.ts  predictor.ts  wrapper.ts
