[package]
name = "predict_star_number_extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
serde = { version = "1.0.186", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.105"
serde_json_any_key = "2.0.0"
tract-onnx = "0.20.7"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }

[dev-dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.11.20", features = ["json", "blocking"] }
