[package]
name = "predict_star_number_extension"
version = "1.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2.16", features = ["js"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.145"
serde_json_any_key = "2.0.0"
tract-onnx = "0.20.22"
wasm-bindgen = { version = "0.2.104", features = ["serde-serialize"] }

[dev-dependencies]
lazy_static = "1.5.0"
reqwest = { version = "0.11.27", features = ["json", "blocking"] }
